@@ -69,6 +69,7 @@ librsvg_2_la_SOURCES = 		\
 	rsvg-cairo-clip.h	\
 	rsvg-cairo-clip.c	\
 	rsvg.c			\
+	rsvg-gobject.c		\
 	rsvg-file-util.c
 
 librsvg_2_la_LDFLAGS = -version-info @VERSION_INFO@ -export-dynamic -no-undefined -export-symbols $(srcdir)/librsvg.def
